# Thesis

./: README.md  model.ipynb  pyproject.toml  template.ipynb
hems/: ampl_results.csv  hems.ipynb  hems_pv_battery.mod  hems_pv_battery.py  hems_pv_battery_ev.mod  hems_pv_battery_ev.py  hems_pv_battery_test.py  markov_functions.py  monte_carlo.py  pv_battery_hems_EV.mod  test.py
hems/data/: site_details.csv  tou_data.csv
hems/data/HalfHourly_PV_Load_Data/: halfhourly_1069844468.csv  halfhourly_1109253791.csv  halfhourly_1170392317.csv  halfhourly_1421267790.csv  halfhourly_1422124037.csv  halfhourly_1450775793.csv  halfhourly_152786204.csv  halfhourly_1542990109.csv  halfhourly_1589260563.csv  halfhourly_1626870991.csv  halfhourly_1674281626.csv  halfhourly_1679518290.csv  halfhourly_1791135663.csv  halfhourly_1800867661.csv  halfhourly_2085326817.csv  halfhourly_289382707.csv  halfhourly_321774035.csv  halfhourly_426950255.csv  halfhourly_742450974.csv  halfhourly_768740089.csv  halfhourly_811007480.csv  halfhourly_847178906.csv  halfhourly_920480321.csv  halfhourly_930666244.csv
hems/tests/: test_markov_functions.py
