[tool.poetry]
name = "thesis-code"
version = "0.1.0"
description = ""
authors = ["Liam Mills <liam.mills1511@gmail.com>"]
readme = "README.md"
packages = [{include = "thesis_code"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
amplpy = "^0.11.2"
black = "^23.7.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
